--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tells you whether it's a good time to hit up a beach in Chicago",
   "main": "js/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "browserify -t reactify js/app.js -o js/bundle.js",
     "start": "watchify -t reactify js/app.js -o js/bundle.js"
   },
@@ -13,10 +13,12 @@
   "dependencies": {
     "flux": "^2.1.1",
     "react": "^0.13.3",
-    "react-bootstrap": "^0.24.5"
+    "react-bootstrap": "^0.24.5",
+    "superagent": "^1.3.0"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "jest-cli": "^0.5.0",
     "reactify": "^1.1.1",
     "watchify": "^3.3.1"
   }
