--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tells you whether it's a good time to hit up a beach in Chicago",
   "main": "js/app.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "build": "browserify -t reactify js/app.js -o js/bundle.js",
     "start": "watchify -t reactify js/app.js -o js/bundle.js"
   },
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
-    "jest-cli": "^0.5.0",
     "reactify": "^1.1.1",
     "watchify": "^3.3.1"
   }
